# currency-api

./: .gitignore  Cargo.toml  compose.yml
crates/currency_api/: Cargo.toml
crates/currency_api/docker/: Dockerfile
crates/currency_api/src/: error.rs  main.rs  v1.rs
crates/currency_cli/: Cargo.toml
crates/currency_cli/src/: main.rs
crates/currency_core/: Cargo.toml
crates/currency_core/src/: lib.rs  providers.rs
crates/currency_core/src/providers/: open_exchange_rates.rs
src/: currency.rs  main.rs
src/currency/: open_exchange_rates.rs
