[package]
name = "currency_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
] }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3.19"
currency_core = { path = "../currency_core" }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
